--- a/+not-found.html
+++ b/+not-found.html
@@ -223,6 +223,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-60vfwk{min-width:1px;}
 .r-633pao{pointer-events:none!important;}
 .r-6dt33c{opacity:1;}
+.r-6e0ovw{width:80%;}
 .r-6gpygo{margin-bottom:12px;}
 .r-6taxm2:-ms-input-placeholder{color:var(--placeholderTextColor);opacity:1;}
 .r-6taxm2::-moz-placeholder{color:var(--placeholderTextColor);opacity:1;}
@@ -257,6 +258,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-eu3ka{height:40px;}
 .r-fdjqy7{text-align:left;}
 .r-g3mlsw{animation-name:r-t2lo5v;}
+.r-g6jmlv{width:100vw;}
 .r-ghxds0{transform:translateY(0%);}
 .r-gtdqiz{position:-webkit-sticky;position:sticky;}
 .r-h0d30l{height:28px;}
@@ -307,6 +309,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 .r-y7v2we{background-color:rgba(32,36,37,1.00);}
 .r-z80fyv{height:20px;}
 .r-zchlnj{right:0px;}
+.r-zh076v{height:100vh;}
 .r-zz5t5d{font-size:28px;}
 @-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 @-webkit-keyframes r-1iq689l{0%{transform:translateY(0%);}100%{transform:translateY(100%);}}
@@ -319,5 +322,5 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @keyframes r-1pzkwqh{0%{transform:translateY(100%);}100%{transform:translateY(0%);}}
 @keyframes r-imtty0{0%{opacity:0;}100%{opacity:1;}}
 @keyframes r-q67da2{0%{transform:translateX(-100%);}100%{transform:translateX(400%);}}
-@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="shortcut icon" href="/NHS-Hack-day---mentoring-app/favicon.ico" /></head><body><div id="root"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-175oi2r r-184en5c r-12vffkv"><div class="css-175oi2r r-12vffkv" style="height:64px"><div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv"><div class="css-175oi2r r-qklmqi r-13awgt0 r-105ug2t" style="background-color:rgba(255,255,255,1.00);border-bottom-color:rgba(216,216,216,1.00)"></div></div><div class="css-175oi2r r-633pao" style="height:0px"></div><div class="css-175oi2r r-1oszu61 r-13awgt0 r-18u37iz r-12vffkv"><div class="css-175oi2r r-1awozwy r-18u37iz r-1h0z5md r-12vffkv" style="margin-left:0px"></div><div class="css-175oi2r r-1777fci r-12vffkv" style="max-width:-32px;margin-right:16px;margin-left:16px"><h1 dir="auto" aria-level="1" role="heading" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1i10wst" style="color:rgba(28,28,30,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">+not-found</h1></div><div class="css-175oi2r r-1awozwy r-18u37iz r-17s6mgv r-1iusvr4 r-16y2uox r-12vffkv" style="margin-right:0px"></div></div></div></div><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-1awozwy r-4ns8oj r-13awgt0 r-1777fci"><a href="/NHS-Hack-day---mentoring-app/" dir="auto" role="link" class="css-146c3p1 r-jwli3a r-adyw6z r-1ddef8g r-1loqt21">Go back to Home screen!</a></div><!--/$--></div></div></div></div><!--/$--></div></div><script src="/NHS-Hack-day---mentoring-app/_expo/static/js/web/entry-d59be3b2d93298d5315e1f6139529168.js" defer></script>
+@keyframes r-t2lo5v{0%{opacity:1;}100%{opacity:0;}}</style><script type="module">globalThis.__EXPO_ROUTER_HYDRATE__=true;</script><link rel="shortcut icon" href="/NHS-Hack-day---mentoring-app/favicon.ico" /></head><body><div id="root"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0 r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af" style="background-color:rgba(242,242,242,1.00);display:flex"><div class="css-175oi2r r-184en5c r-12vffkv"><div class="css-175oi2r r-12vffkv" style="height:64px"><div class="css-175oi2r r-1p0dtai r-1d2f490 r-u8s1d r-zchlnj r-ipm5af r-12vffkv"><div class="css-175oi2r r-qklmqi r-13awgt0 r-105ug2t" style="background-color:rgba(255,255,255,1.00);border-bottom-color:rgba(216,216,216,1.00)"></div></div><div class="css-175oi2r r-633pao" style="height:0px"></div><div class="css-175oi2r r-1oszu61 r-13awgt0 r-18u37iz r-12vffkv"><div class="css-175oi2r r-1awozwy r-18u37iz r-1h0z5md r-12vffkv" style="margin-left:0px"></div><div class="css-175oi2r r-1777fci r-12vffkv" style="max-width:-32px;margin-right:16px;margin-left:16px"><h1 dir="auto" aria-level="1" role="heading" class="css-146c3p1 r-dnmrzs r-1udh08x r-1udbk01 r-3s2u2q r-1iln25a r-1i10wst" style="color:rgba(28,28,30,1.00);font-family:system-ui, &quot;Segoe UI&quot;, Roboto, Helvetica, Arial, sans-serif, &quot;Apple Color Emoji&quot;, &quot;Segoe UI Emoji&quot;, &quot;Segoe UI Symbol&quot;;font-weight:500">+not-found</h1></div><div class="css-175oi2r r-1awozwy r-18u37iz r-17s6mgv r-1iusvr4 r-16y2uox r-12vffkv" style="margin-right:0px"></div></div></div></div><div class="css-175oi2r r-13awgt0"><div class="css-175oi2r r-13awgt0"><!--$--><div class="css-175oi2r r-1awozwy r-4ns8oj r-13awgt0 r-1777fci"><a href="/NHS-Hack-day---mentoring-app/" dir="auto" role="link" class="css-146c3p1 r-jwli3a r-adyw6z r-1ddef8g r-1loqt21">Go back to Home screen!</a></div><!--/$--></div></div></div></div><!--/$--></div></div><script src="/NHS-Hack-day---mentoring-app/_expo/static/js/web/entry-d1afe93e142c9f87b256031bec402aae.js" defer></script>
 </body></html>
